--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="collapse navbar-collapse single-page-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#section-1"><span class="icn"><i class="fas fa-2x fa-user"></i></span> Our Company</a>
+                            <a class="nav-link" href="#section-1"><span class="icn"><i class="fas fa-2x fa-user"></i></span> Paulepops!</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#section-2"><span class="icn"><i class="fas fa-2x fa-user-tie"></i></span> Work history </a>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="item">
                         <div class="logo-fa"><img src="img/Paul.png" alt="A photo of me"></div>
-                        <div class="bg-blue-transparent simple"><p>A little bit about myself ...</p></div>
+                        <div class="bg-blue-transparent simple"><p>I started "learning computers" in 1988 and haven't looked back.  I've tried various programming languages (I'm a better debugger than coder), managed several databases of various types, and was heavily involved with general and Y2K software testing.  But my real passion has always been the web. I started with HTML2 and CSS1, and have been hooked ever since. I'm a huge supporter of web standards and web accessibility.</p></div>
                     </div>
                 </div>
             </div>
@@ -69,21 +69,21 @@
                             <div class="tm-work-item-inner">
                                 <div class="icn"><img src="img/career1.jpg" alt="Royal Australian Air Force"></div>
                                 <h3>21 Years!</h3>
-                                <p>Simply Amazed is free HTML template provided by Tooplate website. Please tell your friends about our website. Thank you.</p>
+                                <p>I joined the Royal Australian Air Force straight out of school and learned the adminstration trade while transferring around the country.  I finished by career working in Canberra on the Air Force's personnel database systems.</p>
                             </div>                        
                         </div>
                         <div class="item col-md-4 one">
                             <div class="tm-work-item-inner">
                                 <div class="icn"><img src="img/career2.jpg" alt="Australain Public Service"></div>
                                 <h3>22 Years!</h3>
-                                <p>This is a full-width CSS template with bootstrap 5, you can download, modify and use this layout for your simple CSS website.</p>
+                                <p>Straight out of the Air Force and into the Australian Public Service!  After Y2K testing, I transferred to web administration, content management and database administration. I finished my second career improving website accessibility and programming the Community forum site for the Australian Taxation Office.</p>
                             </div>
                         </div>
                         <div class="item col-md-4 two">
                             <div class="tm-work-item-inner">
                                 <div class="icn"><img src="img/career3.jpg" alt="Retirement!"></div>
                                 <h3>2 Years (and counting)</h3>
-                                <p>You are allowed to use this for your personal and commerical projects, you are not allowed to redistribute the template ZIP file on any download site.</p>
+                                <p>I've long since retired ... my son's moved away ... he called me up just the other day!  But seriously, with apologies to Harry Chapin, I'm teaching myself all the web stuff I didn't have time to learn while I was working!</p>
                             </div>
                         </div>
                     </div>
@@ -97,82 +97,82 @@
                     </div>
                     <div class="mx-auto gallery-slider">
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-01.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-01.jpg" alt="RAAF certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Certificate IV in Business (Adminstration)</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-02.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-02.jpg" alt="Adelaide TAFE certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Associate Diploma in Information Systems</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-03.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-03.jpg" alt="Plan-IT certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Web-based Testing for Developers</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-04.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-04.jpg" alt="BCS (ISEB) Certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Foundation Certificate in Software Testing</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-05.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-05.jpg" alt="UTS Diploma">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Graduate Diploma in Professional Practice in Information Technology</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-06.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-06.jpg" alt="UniSA certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Professional Certificate in Web Accessibility Compliance</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-07.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-07.jpg" alt="Vision Australia certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Web Accessibility Techniques and Testing</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-08.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-08.jpg" alt="PADI certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>International Open Water Diver</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/gallery-img-09.jpg" alt="Image">
+                            <img src="img/certs/gallery-img-09.jpg" alt="Bowls Australia certificate">
                             <figcaption>
                                 <div>
-                                    <p>Julia dances in the deep dark</p>
+                                    <p>Bowls Australia National Umpire</p>
                                 </div>
                                 <a href="#">View more</a>
                             </figcaption>
@@ -181,7 +181,7 @@
                 </div>
             </section>
         
-            <div class="affiliation-section section parallax-window" data-parallax="scroll" data-image-src="img/section-4-bg.jpg" id="section-4">
+            <div class="affiliation-section section bg-blue-transparent" id="section-4">
                 <div class="container">
                     <div class="row">
                         <div class="title text-right">
@@ -198,7 +198,7 @@
                 </div>  
             </section>
 
-            <section class="contact-section section" id="section-5">
+            <section class="contact-section section parallax-window" data-parallax="scroll" data-image-src="img/section-5-bg.jpg" id="section-5">
                 <div class="container">
                     <div class="title text-right">
                         <h3>Contact me</h3>
@@ -255,8 +255,8 @@
                 </div>
                 <footer class="footer container container-2">
                     <div class="row"> 
-                        <p class="col-sm-7">Copyright 2021 Simply Amazed Co.</p>
-                        <p class="col-sm-5 text-right design">Design: <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate</a></p>
+                        <p class="col-sm-7">Copyright 2022</p>
+                        <p class="col-sm-5 text-right design"><a rel="nofollow" href="#section-1">PAULEPOPS!</a></p>
                     </div>
                 </footer>
             </section>
