Affiliations section added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <div class="title text-right">
                         <h2>Paulepops!</h2>
                     </div>
+                        <p class="country">Paredarerme ('Parr darr ama') country</p>
                     <div class="item">
                         <div class="logo-fa"><img src="img/Paul.png" alt="A photo of me"></div>
                         <div class="bg-blue-transparent simple"><p>I started "learning computers" in 1988 and haven't looked back.  I've tried various programming languages (I'm a better debugger than coder), managed several databases of various types, and was heavily involved with general and Y2K software testing.  But my real passion has always been the web. I started with HTML2 and CSS1, and have been hooked ever since. I'm a huge supporter of web standards and web accessibility.</p></div>
@@ -102,16 +103,14 @@
                                 <div>
                                     <p>Certificate IV in Business (Adminstration)</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
-                            <img src="img/certs/gallery-img-02.jpg" alt="Adelaide TAFE certificate">
+                            <img src="img/certs/gallery-img-02.jpg" alt="South Australia TAFE certificate">
                             <figcaption>
                                 <div>
                                     <p>Associate Diploma in Information Systems</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -120,7 +119,6 @@
                                 <div>
                                     <p>Web-based Testing for Developers</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -129,7 +127,6 @@
                                 <div>
                                     <p>Foundation Certificate in Software Testing</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -138,7 +135,6 @@
                                 <div>
                                     <p>Graduate Diploma in Professional Practice in Information Technology</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -147,7 +143,6 @@
                                 <div>
                                     <p>Professional Certificate in Web Accessibility Compliance</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -156,7 +151,6 @@
                                 <div>
                                     <p>Web Accessibility Techniques and Testing</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -165,7 +159,6 @@
                                 <div>
                                     <p>International Open Water Diver</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                         <figure class="effect-julia item">
@@ -174,7 +167,6 @@
                                 <div>
                                     <p>Bowls Australia National Umpire</p>
                                 </div>
-                                <a href="#">View more</a>
                             </figcaption>
                         </figure>
                     </div>
@@ -185,14 +177,40 @@
                 <div class="container">
                     <div class="row">
                         <div class="title text-right">
-                            <h2>Affiliations</h2>
+                            <h2>Affiliations and Associations</h2>
                         </div>
-                        <div>
-                            <p class="bg-blue-transparent simple">You are allowed to use this for your personal and commerical projects, you are not allowed to redistribute the template ZIP file on any download site.</p>
-                            <p class="bg-blue-transparent simple">You are allowed to use this for your personal and commerical projects, you are not allowed to redistribute the template ZIP file on any download site.</p>
-                            <p class="bg-blue-transparent simple">You are allowed to use this for your personal and commerical projects, you are not allowed to redistribute the template ZIP file on any download site.</p>
+                        <div class="flex-container">
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.uts.edu.au/" target="_blank"><img src="./img/logos/uts-logo.jpg" alt="University of Technology Sydney"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://unisa.edu.au/" target="_blank"><img src="./img/logos/uniSA-logo.jpg" alt="University of South Australia"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.webindustry.org.au/" target="_blank"><img src="./img/logos/awia-logo.jpg" alt="Australian Web Industry Association"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.w3.org/" target="_blank"><img src="./img/logos/w3c-logo.png" alt="World Wide Web Consortium"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.airforce.gov.au/" target="_blank"><img src="./img/logos/raaf-crest.jpg" alt="Royal Australian Air Force"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.bowls.com.au/" target="_blank"><img src="./img/logos/ba-logo.jpg" alt="Bowls Australia"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://bowlstasmaniasouth.bowls.com.au" target="_blank"><img src="./img/logos/BTS-logo.png" alt="Bowls Tasmania South"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://sorell.bowls.com.au/" target="_blank"><img src="./img/logos/sorell-logo.jpg" alt="Sorell Bowls Club"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.saints.com.au/" target="_blank"><img src="./img/logos/StKFC-logo.png" alt="St Kilda Football Club"></a>
+                            </div>
+                            <div class="flex-item mx-auto">
+                                <a href="https://www.sharks.com.au/" target="_blank"><img src="./img/logos/sharks-logo.png" alt="Cronulla Sharks"></a>
+                            </div>
                         </div>
-    
                     </div>
                 </div>
                 </div>  
