--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body>
     <div id="outer">
+        <a href="#section-1" class="skip-link">Skip to main content</a> 
+        <a href="#main-nav" class="skip-link">Skip to main navigation</a> 
         <header class="header order-last" id="tm-header">
-            <nav class="navbar">
+            <nav id="main-nav" class="navbar">
                 <div class="collapse navbar-collapse single-page-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -38,11 +40,12 @@
             </nav>
         </header>
         
-        <button class="navbar-button collapsed" type="button">
+        <button class="navbar-button collapsed" type="button" aria-label="Navigation menu">
             <span class="menu_icon">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="menu-label">MENU</span>
             </span>
         </button>
         
@@ -250,11 +253,11 @@
                                     </li>
                                     <li>
                                         <span class="icn"><i class="fas fa-at"></i></span>
-                                        <span class="lbl">Email:</span> <a href="#">info@company.com</a>
+                                        <span class="lbl">Email:</span> <a href="#">sorroko-dev@outlook.com</a>
                                     </li>
                                     <li>
                                         <span class="icn"><i class="fas fa-globe-asia"></i></span>
-                                        <span class="lbl">URL:</span> <a href="#">www.company.com</a>
+                                        <span class="lbl">URL:</span> <a href="#">https://paulepops.github.io/</a>
                                     </li>
                                 </ul>
                             </div>                        
@@ -263,18 +266,16 @@
                             <!-- Map -->
                             <div class="map-outer tm-mb-40">
                                 <div class="gmap-canvas">
-                                    <iframe width="100%" height="400" id="gmap-canvas"
-                                        src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                                </div>
+                                    <iframe id="gmap-canvas" title="Google map showing Sorell" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30086.994766016232!2d147.5505369710354!3d-42.786570235113054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaa6de310c40790df%3A0xf99405720da47734!2sHorizon%20Dr%2C%20Sorell%20TAS%207172%2C%20Australia!5e0!3m2!1sen!2sus!4v1651475964656!5m2!1sen!2sus" width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+                               </div>
                             </div>
                         </div>
                     </div>                
                 </div>
                 <footer class="footer container container-2">
                     <div class="row"> 
-                        <p class="col-sm-7">Copyright 2022</p>
-                        <p class="col-sm-5 text-right design"><a rel="nofollow" href="#section-1">PAULEPOPS!</a></p>
+                        <p class="col-sm-7">Copyright 2022 PAULEPOPS!</p>
+                        <p class="col-sm-5 text-right design"><a rel="nofollow" href="#top">&#129045; BACK TO TOP &#129045;</a></p>
                     </div>
                 </footer>
             </section>
