Hid contact me section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#section-4"><span class="icn"><i class="fas fa-2x fa-user-shield"></i></span> Affiliations</a>
                         </li>
+                        <!--
                         <li class="nav-item">
                             <a class="nav-link" href="#section-5"><span class="icn"><i class="fas fa-2x fa-user-edit"></i></span> Contact me</a>
                         </li>
+                        -->
                     </ul>
                 </div>
             </nav>
@@ -63,7 +65,7 @@
                 </div>
             </div>
         
-            <section class="work-section section" id="section-2">
+            <section class="work-section section parallax-window" data-parallax="scroll" data-image-src="img/section-5-bg.jpg" id="section-2">
                 <div class="container">
                     <div class="title text-right">
                         <h2>Work History</h2>
@@ -176,7 +178,7 @@
                 </div>
             </section>
         
-            <div class="affiliation-section section bg-blue-transparent" id="section-4">
+            <div class="affiliation-section section  parallax-window" data-parallax="scroll" data-image-src="img/section-4-bg.jpg" id="section-4">
                 <div class="container">
                     <div class="row">
                         <div class="title text-right">
@@ -217,6 +219,7 @@
                     </div>
                 </div>
                 </div>  
+            <!--
             </section>
 
             <section class="contact-section section parallax-window" data-parallax="scroll" data-image-src="img/section-5-bg.jpg" id="section-5">
@@ -263,7 +266,6 @@
                             </div>                        
                         </div>
                         <div class="col-lg-3 col-md-12 map">
-                            <!-- Map -->
                             <div class="map-outer tm-mb-40">
                                 <div class="gmap-canvas">
                                     <iframe id="gmap-canvas" title="Google map showing Sorell" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30086.994766016232!2d147.5505369710354!3d-42.786570235113054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaa6de310c40790df%3A0xf99405720da47734!2sHorizon%20Dr%2C%20Sorell%20TAS%207172%2C%20Australia!5e0!3m2!1sen!2sus!4v1651475964656!5m2!1sen!2sus" width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
@@ -272,9 +274,10 @@
                         </div>
                     </div>                
                 </div>
+            -->
                 <footer class="footer container container-2">
                     <div class="row"> 
-                        <p class="col-sm-7">Copyright 2022 PAULEPOPS!</p>
+                        <p class="col-sm-7">Copyright 2022 | PAULEPOPS!</p>
                         <p class="col-sm-5 text-right design"><a rel="nofollow" href="#top">&#129045; BACK TO TOP &#129045;</a></p>
                     </div>
                 </footer>
