--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                         <p class="country">Paredarerme ('Parr darr ama') country</p>
                     <div class="item">
-                        <div class="logo-fa"><img src="img/Paul.png" alt="A photo of me"></div>
+                        <div class="logo-img"><img src="img/Paul.png" alt="A photo of me"></div>
                         <div class="bg-blue-transparent simple"><p>I started "learning computers" in 1988 and haven't looked back.  I've tried various programming languages (I'm a better debugger than coder), managed several databases of various types, and was heavily involved with general and Y2K software testing.  But my real passion has always been the web. I started with HTML2 and CSS1, and have been hooked ever since. I'm a huge supporter of web standards and web accessibility.</p></div>
                     </div>
                 </div>
