--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p class="country">Paredarerme ('Parr darr ama') country</p>
                     <div class="item">
                         <div class="logo-img"><img src="img/Paul.png" alt="A photo of me"></div>
-                        <div class="bg-blue-transparent simple"><p>I started "learning computers" in 1988 and haven't looked back.  I've tried various programming languages (I'm a better debugger than coder), managed several databases of various types, and was heavily involved with general and Y2K software testing.  But my real passion has always been the web. I started with HTML2 and CSS1, and have been hooked ever since. I'm a huge supporter of web standards and web accessibility.</p></div>
+                        <div class="bg-blue-transparent simple"><p>I started with COBOL and Pascal in the late 1980s, got into databases for a while, played with Unix versus DOS, but eventually found my home with web coding. Thank you Netscape! I started with HTML2 and CSS1 and I'm a huge supporter of web standards and web accessibility.</p></div>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                         <h2>Qualifications</h2>
                     </div>
                     <div class="mx-auto gallery-slider">
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-01.jpg" alt="RAAF certificate">
                             <figcaption>
                                 <div>
@@ -110,7 +110,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-02.jpg" alt="South Australia TAFE certificate">
                             <figcaption>
                                 <div>
@@ -118,7 +118,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-03.jpg" alt="Plan-IT certificate">
                             <figcaption>
                                 <div>
@@ -126,7 +126,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-04.jpg" alt="BCS (ISEB) Certificate">
                             <figcaption>
                                 <div>
@@ -134,7 +134,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-05.jpg" alt="UTS Diploma">
                             <figcaption>
                                 <div>
@@ -142,7 +142,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-06.jpg" alt="UniSA certificate">
                             <figcaption>
                                 <div>
@@ -150,7 +150,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-07.jpg" alt="Vision Australia certificate">
                             <figcaption>
                                 <div>
@@ -158,7 +158,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-08.jpg" alt="PADI certificate">
                             <figcaption>
                                 <div>
@@ -166,7 +166,7 @@
                                 </div>
                             </figcaption>
                         </figure>
-                        <figure class="effect-julia item">
+                        <figure class="fig-effect item">
                             <img src="img/certs/gallery-img-09.jpg" alt="Bowls Australia certificate">
                             <figcaption>
                                 <div>
