Added BaseCSS utility stylesheet

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" type="text/css" /> 
+    <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" /> 
     <link rel="stylesheet" href="css/slick.css" type="text/css" />   
     <link rel="stylesheet" href="css/simply-amazed.css" type="text/css" />
+    <link rel="stylesheet" href="css/basecss.min" type="text/css" />
 </head>
 
 <body>
@@ -32,11 +33,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#section-4"><span class="icn"><i class="fas fa-2x fa-user-shield"></i></span> Affiliations</a>
                         </li>
-                        <!--
-                        <li class="nav-item">
-                            <a class="nav-link" href="#section-5"><span class="icn"><i class="fas fa-2x fa-user-edit"></i></span> Contact me</a>
-                        </li>
-                        -->
                     </ul>
                 </div>
             </nav>
@@ -178,7 +174,7 @@
                 </div>
             </section>
         
-            <div class="affiliation-section section  parallax-window" data-parallax="scroll" data-image-src="img/section-4-bg.jpg" id="section-4">
+            <section class="affiliation-section section  parallax-window" data-parallax="scroll" data-image-src="img/section-4-bg.jpg" id="section-4">
                 <div class="container">
                     <div class="row">
                         <div class="title text-right">
@@ -217,71 +213,15 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                </div>  
-            <!--
+                </div> 
             </section>
 
-            <section class="contact-section section parallax-window" data-parallax="scroll" data-image-src="img/section-5-bg.jpg" id="section-5">
-                <div class="container">
-                    <div class="title text-right">
-                        <h3>Contact me</h3>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6 mb-4 contact-form">
-                            <div class="form tm-contact-item-inner">
-                                <form action="#" method="POST">
-                                    <div class="form-group">
-                                        <input name="name" type="text" class="form-control" placeholder="Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input name="email" type="text" class="form-control" placeholder="Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea name="message" class="textarea form-control" placeholder="Message"></textarea>
-                                    </div>
-                                    <div class="form-group text-right">
-                                        <input type="submit" class="btn btn-primary" value="Send it">
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 mb-4 contact-details">
-                            <div class="tm-contact-item-inner-2">
-                                <p>Nam mollis felis elementum, placerat dolor id, vehicula libero. Etiam dui nisl, mattis ut rhoncus et, cursus ut diam.</p>
-                                <ul class="font-weight-light">
-                                    <li>
-                                        <span class="icn"><i class="fas fa-mobile-alt"></i></span>
-                                        <span class="lbl">Tel:</span> <a href="#">010-020-0340</a>
-                                    </li>
-                                    <li>
-                                        <span class="icn"><i class="fas fa-at"></i></span>
-                                        <span class="lbl">Email:</span> <a href="#">sorroko-dev@outlook.com</a>
-                                    </li>
-                                    <li>
-                                        <span class="icn"><i class="fas fa-globe-asia"></i></span>
-                                        <span class="lbl">URL:</span> <a href="#">https://paulepops.github.io/</a>
-                                    </li>
-                                </ul>
-                            </div>                        
-                        </div>
-                        <div class="col-lg-3 col-md-12 map">
-                            <div class="map-outer tm-mb-40">
-                                <div class="gmap-canvas">
-                                    <iframe id="gmap-canvas" title="Google map showing Sorell" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30086.994766016232!2d147.5505369710354!3d-42.786570235113054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaa6de310c40790df%3A0xf99405720da47734!2sHorizon%20Dr%2C%20Sorell%20TAS%207172%2C%20Australia!5e0!3m2!1sen!2sus!4v1651475964656!5m2!1sen!2sus" width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-                               </div>
-                            </div>
-                        </div>
-                    </div>                
+            <footer class="footer container container-2">
+                <div class="row"> 
+                    <p class="col-sm-7">Copyright 2022 | PAULEPOPS!</p>
+                    <p class="col-sm-5 text-right design"><a rel="nofollow" href="#top">&#129045; BACK TO TOP &#129045;</a></p>
                 </div>
-            -->
-                <footer class="footer container container-2">
-                    <div class="row"> 
-                        <p class="col-sm-7">Copyright 2022 | PAULEPOPS!</p>
-                        <p class="col-sm-5 text-right design"><a rel="nofollow" href="#top">&#129045; BACK TO TOP &#129045;</a></p>
-                    </div>
-                </footer>
-            </section>
+            </footer>
         </main>
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
