--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 </head>
 
 <body>
-    <div id="outer">
+    <div id="outer" class="relative flex m0 fit">
         <a href="#section-1" class="skip-link">Skip to main content</a> 
         <a href="#main-nav" class="skip-link">Skip to main navigation</a> 
+
         <header class="header order-last" id="tm-header">
             <nav id="main-nav" class="navbar">
                 <div class="collapse navbar-collapse single-page-nav">
@@ -48,6 +49,7 @@
         </button>
         
         <main id="content-box" class="order-first">
+
             <div class="banner-section section parallax-window" data-parallax="scroll" data-image-src="img/section-1-bg.jpg" id="section-1">
                 <div class="container">
                     <div class="title text-right">
@@ -215,15 +217,14 @@
                     </div>
                 </div> 
             </section>
-
-            <footer class="footer container container-2">
-                <div class="row"> 
-                    <p class="col-sm-7">Copyright 2022 | PAULEPOPS!</p>
-                    <p class="col-sm-5 text-right design"><a rel="nofollow" href="#top">&#129045; BACK TO TOP &#129045;</a></p>
-                </div>
-            </footer>
         </main>
-    </div>
+
+        <footer class="footer flex-wrap content-stretch">
+            <p class="small">&copy; Copyright 2022</p>
+            <p class="small">PAULEPOPS!</p>
+        </footer>
+
+    </div> <!-- #OUTER -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.singlePageNav.min.js"></script>
