Fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#section-3"><span class="icn"><i class="fas fa-2x fa-user-graduate"></i></span><span class="menu-item">Qualifications</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section-4"><span class="icn"><i class="fas fa-2x fa-user-shield"></i></span><span class="menu-item">Affiliations</span></a>
+                            <a class="nav-link" href="#section-4"><span class="icn"><i class="fas fa-2x fa-user-shield"></i></span><span class="menu-item">Interests</span></a>
                         </li>
                     </ul>
                 </div>
@@ -47,8 +47,8 @@
                     <div class="title text-right">
                         <h2>Paulepops!</h2>
                     </div>
-                        <p class="country">Paredarerme ('Parr darr ama') country</p>
                     <div class="item">
+                        <p class="country">Paredarerme ('Parr darr ama') country</p>
                         <div class="logo-img"><img src="img/Paul.png" alt="A photo of me"></div>
                         <div class="bg-blue-transparent simple"><p>I started with COBOL and Pascal in the late 1980s, got into databases for a while, played with Unix versus DOS, but eventually found my home with web coding. Thank you Netscape! I started with HTML2 and CSS1 and I'm a huge supporter of web standards and web accessibility.</p></div>
                     </div>
@@ -68,17 +68,17 @@
                                 <p>I joined the Royal Australian Air Force straight out of school and learned the adminstration trade while transferring around the country. I finished my career working in Canberra as a software tester for the Air Force's personnel database systems.</p>
                             </div>                        
                         </div>
-                        <div class="item col-md-4 one">
+                        <div class="item col-md-4">
                             <div class="mx-auto mb3">
                                 <img src="img/career2.jpg" class="icn bg-white border circle" alt="Australain Public Service">
                                 <h3>22 Years!</h3>
                                 <p>Straight out of the Air Force and into the Australian Public Service! After Y2K testing, I transitioned into web development and content management. I finished my second career improving web accessibility and coding for the Department's Community forum site.</p>
                             </div>
                         </div>
-                        <div class="item col-md-4 two">
+                        <div class="item col-md-4">
                             <div class="mx-auto mb3">
                                 <img src="img/career3.jpg" class="icn bg-white border circle" alt="Retirement!">
-                                <h3>2 Years (and counting)</h3>
+                                <h3>2 Years ...</h3>
                                 <p>I retired! In between lawn bowls administration, playing bowls, household maintenance, and generally enjoying life, I'm learning all the web stuff I didn't have time to learn while I was working!  I have no plans to do anything with this new knowledge (at this stage).</p>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                 </div>
             </section>
 
-            <section id="section-3" class="gallery-section section parallax-window" data-parallax="scroll" data-image-src="img/section-3-bg.jpg">
+            <section id="section-3" class="certs-section section parallax-window" data-parallax="scroll" data-image-src="img/section-3-bg.jpg">
                 <div class="container">
                     <div class="title text-right">
                         <h2>Qualifications</h2>
@@ -168,11 +168,11 @@
                 </div>
             </section>
         
-            <section id="section-4" class="affiliation-section section  parallax-window" data-parallax="scroll" data-image-src="img/section-4-bg.jpg">
+            <section id="section-4" class="interests-section section  parallax-window" data-parallax="scroll" data-image-src="img/section-4-bg.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="title text-right">
-                            <h2>Affiliations and Associations</h2>
+                            <h2>Interests</h2>
                         </div>
                         <div class="flex-container">
                             <div class="flex-item mx-auto">
