--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="item">
                         <p class="country">Paredarerme ('Parr darr ama') country</p>
-                        <div class="logo-img"><img src="img/Paul.png" alt="A photo of me"></div>
+                        <div class="logo-img"><img src="./img/Paul.png" alt="A photo of me" loading="eager" width="400px" height="320px"></div>
                         <div class="bg-blue-transparent simple"><p>I started with COBOL and Pascal in the late 1980s, got into databases for a while, played with Unix versus DOS, but eventually found my home with web coding. Thank you Netscape! I started with HTML2 and CSS1 and I'm a huge supporter of web standards and web accessibility.</p></div>
                     </div>
                 </div>
@@ -63,21 +63,21 @@
                     <div class="row">
                         <div class="item col-md-4">
                             <div class="mx-auto mb3">
-                                <img src="img/career1.jpg" class="icn bg-white border circle" alt="Royal Australian Air Force">
+                                <img src="./img/career1.jpg" class="icn bg-white border circle" alt="Royal Australian Air Force" loading="lazy" width="120px" height="120px">
                                 <h3>21 Years!</h3>
                                 <p>I joined the Royal Australian Air Force straight out of school and learned the adminstration trade while transferring around the country. I finished my career working in Canberra as a software tester for the Air Force's personnel database systems.</p>
                             </div>                        
                         </div>
                         <div class="item col-md-4">
                             <div class="mx-auto mb3">
-                                <img src="img/career2.jpg" class="icn bg-white border circle" alt="Australain Public Service">
+                                <img src="./img/career2.jpg" class="icn bg-white border circle" alt="Australain Public Service" loading="lazy" width="120px" height="120px">
                                 <h3>22 Years!</h3>
                                 <p>Straight out of the Air Force and into the Australian Public Service! After Y2K testing, I transitioned into web development and content management. I finished my second career improving web accessibility and coding for the Department's Community forum site.</p>
                             </div>
                         </div>
                         <div class="item col-md-4">
                             <div class="mx-auto mb3">
-                                <img src="img/career3.jpg" class="icn bg-white border circle" alt="Retirement!">
+                                <img src="./img/career3.jpg" class="icn bg-white border circle" alt="Retirement!" loading="lazy" width="120px" height="120px">
                                 <h3>2 Years ...</h3>
                                 <p>I retired! In between lawn bowls administration, playing bowls, household maintenance, and generally enjoying life, I'm learning all the web stuff I didn't have time to learn while I was working!  I have no plans to do anything with this new knowledge (at this stage).</p>
                             </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="mx-auto gallery-slider">
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-01.jpg" alt="RAAF certificate">
+                            <img src="./img/certs/gallery-img-01.jpg" alt="RAAF certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Certificate IV in Business (Adminstration)</p>
@@ -101,7 +101,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-02.jpg" alt="South Australia TAFE certificate">
+                            <img src="./img/certs/gallery-img-02.jpg" alt="South Australia TAFE certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Associate Diploma in Information Systems</p>
@@ -109,7 +109,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-03.jpg" alt="Plan-IT certificate">
+                            <img src="./img/certs/gallery-img-03.jpg" alt="Plan-IT certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Web-based Testing for Developers</p>
@@ -117,7 +117,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-04.jpg" alt="BCS (ISEB) Certificate">
+                            <img src="./img/certs/gallery-img-04.jpg" alt="BCS (ISEB) Certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Foundation Certificate in Software Testing</p>
@@ -125,7 +125,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-05.jpg" alt="UTS Diploma">
+                            <img src="./img/certs/gallery-img-05.jpg" alt="UTS Diploma" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Graduate Diploma in Professional Practice in Information Technology</p>
@@ -133,7 +133,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-06.jpg" alt="UniSA certificate">
+                            <img src="./img/certs/gallery-img-06.jpg" alt="UniSA certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Professional Certificate in Web Accessibility Compliance</p>
@@ -141,7 +141,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-07.jpg" alt="Vision Australia certificate">
+                            <img src="./img/certs/gallery-img-07.jpg" alt="Vision Australia certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Web Accessibility Techniques and Testing</p>
@@ -149,7 +149,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-08.jpg" alt="PADI certificate">
+                            <img src="./img/certs/gallery-img-08.jpg" alt="PADI certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>International Open Water Diver</p>
@@ -157,7 +157,7 @@
                             </figcaption>
                         </figure>
                         <figure class="fig-effect item">
-                            <img src="img/certs/gallery-img-09.jpg" alt="Bowls Australia certificate">
+                            <img src="./img/certs/gallery-img-09.jpg" alt="Bowls Australia certificate" loading="lazy" width="245px" height="348px">
                             <figcaption>
                                 <div>
                                     <p>Bowls Australia National Umpire</p>
@@ -176,34 +176,34 @@
                         </div>
                         <div class="flex-container">
                             <div class="flex-item mx-auto">
-                                <a href="https://www.uts.edu.au/" target="_blank"><img src="./img/logos/uts-logo.jpg" alt="University of Technology Sydney"></a>
+                                <a href="https://www.uts.edu.au/" target="_blank"><img src="./img/logos/uts-logo.jpg" alt="University of Technology Sydney" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://unisa.edu.au/" target="_blank"><img src="./img/logos/uniSA-logo.jpg" alt="University of South Australia"></a>
+                                <a href="https://unisa.edu.au/" target="_blank"><img src="./img/logos/uniSA-logo.jpg" alt="University of South Australia" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://www.webindustry.org.au/" target="_blank"><img src="./img/logos/awia-logo.jpg" alt="Australian Web Industry Association"></a>
+                                <a href="https://www.webindustry.org.au/" target="_blank"><img src="./img/logos/awia-logo.jpg" alt="Australian Web Industry Association" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://www.w3.org/" target="_blank"><img src="./img/logos/w3c-logo.png" alt="World Wide Web Consortium"></a>
+                                <a href="https://www.w3.org/" target="_blank"><img src="./img/logos/w3c-logo.png" alt="World Wide Web Consortium" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://www.airforce.gov.au/" target="_blank"><img src="./img/logos/raaf-crest.jpg" alt="Royal Australian Air Force"></a>
+                                <a href="https://www.airforce.gov.au/" target="_blank"><img src="./img/logos/raaf-crest.jpg" alt="Royal Australian Air Force" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://www.bowls.com.au/" target="_blank"><img src="./img/logos/ba-logo.jpg" alt="Bowls Australia"></a>
+                                <a href="https://www.bowls.com.au/" target="_blank"><img src="./img/logos/ba-logo.jpg" alt="Bowls Australia" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://bowlstasmaniasouth.bowls.com.au" target="_blank"><img src="./img/logos/BTS-logo.png" alt="Bowls Tasmania South"></a>
+                                <a href="https://bowlstasmaniasouth.bowls.com.au" target="_blank"><img src="./img/logos/BTS-logo.png" alt="Bowls Tasmania South" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://sorell.bowls.com.au/" target="_blank"><img src="./img/logos/sorell-logo.jpg" alt="Sorell Bowls Club"></a>
+                                <a href="https://sorell.bowls.com.au/" target="_blank"><img src="./img/logos/sorell-logo.jpg" alt="Sorell Bowls Club" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://www.saints.com.au/" target="_blank"><img src="./img/logos/StKFC-logo.png" alt="St Kilda Football Club"></a>
+                                <a href="https://www.saints.com.au/" target="_blank"><img src="./img/logos/StKFC-logo.png" alt="St Kilda Football Club" loading="lazy" width="190px" height="190px"></a>
                             </div>
                             <div class="flex-item mx-auto">
-                                <a href="https://www.sharks.com.au/" target="_blank"><img src="./img/logos/sharks-logo.png" alt="Cronulla Sharks"></a>
+                                <a href="https://www.sharks.com.au/" target="_blank"><img src="./img/logos/sharks-logo.png" alt="Cronulla Sharks" loading="lazy" width="190px" height="190px"></a>
                             </div>
                         </div>
                     </div>
